# project2_Bogdanov_Artem_M25-555

./: Makefile  README.md  pyproject.toml
