[tool.poetry]
name = "project2-bogdanov-artem-m25-555"
version = "0.1.0"
description = "primitive_db"
authors = ["Богданов Артём <bogdartem1997@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"